# GodotVoxelTerrain

./: .gitignore  .gitmodules  InfiniteTerrain.csproj  InfiniteTerrain.sln  World.tscn  project.godot
Properties/: AssemblyInfo.cs
entities/: Player.tscn
native/: CMakeLists.txt  SConstruct
native/src/: Chunk.cpp  Chunk.h  HeightMap.cpp  HeightMap.h  Terrain.cpp  Terrain.h  Terrain.os  Utils.h  gdlibrary.cpp  gdlibrary.os  voxelterrain.gdnlib
native/test/: ChunkTest.cpp
scripts/: Camera.gd  LabelFps.gd  Player.gd  Terrain.gd  chunk.gdns  terrain.gdns  test.gd
